# InfinityGamoku

./: .gitignore  CMakeLists.txt
include/: Cell.h  FieldSector.h  GameBoard.h  GameView.h  GamokuCommon.h  GamokuField.h  mainwindow.h
source/: Cell.cpp  FieldSector.cpp  GameBoard.cpp  GameView.cpp  GamokuField.cpp  main.cpp  mainwindow.cpp
